# appeal-classification

./: .dockerignore  .gitignore  Dockerfile  appeals.txt  docker-compose.yml  pyproject.toml  test.db
app/: analytics.py  config.py  database.py  main.py  models.py  schemas.py
app/classification/: censor.py  classifier.py  embeddings.py  llm.py
app/data/: categories.json
