[project]
name = "appeal-classifier"
version = "0.1.0"
requires-python = "==3.12.3"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
    "sentence-transformers>=2.5.0",
    "httpx>=0.27.0",
    "transformers>=4.38.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.2.0",
    "torch>=2.0.0",   # для transformers
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = []